[package]
name = "scraper-utils"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ ]
profiling = [
    "tracing",
]

[dependencies]
anchor-lang = "0.28.0"
chrono = "0.4.20"
diesel = { version = "2.1.1", features = [ "postgres", "chrono" ] }
log = "0.4.17"
solana-client = "~1.16.0"
solana-sdk = "~1.16.0"
solana-transaction-status = "~1.16.0"
thiserror = "1.0.31"

tracing = { version = "0.1.37", optional = true }